# rusty-d20

./: .env  Cargo.toml  README.md
docs/: context.md  lib.md  message.md
src/: context.rs  lib.rs  main.rs  message.rs  tools.rs
src/tools/: random_number.rs
