[package]
name = "rusty-d20"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = { version = "0.34.0", features = ["assistant-types", "byot", "chat-completion", "response-types"] }
color-eyre = "0.6.5"
dotenv = "0.15.0"
eyre = "0.6.12"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
